--- a/public/css/front.css
+++ b/public/css/front.css
@@ -105,6 +105,16 @@ body.form_page .banner_top {
     line-height: 33px;
 }
 
+.page_content h2 {
+    font-size: 18px;
+    border-bottom: 1px solid #e8e8e8;
+    margin-bottom: 10px;
+    padding-bottom: 10px;
+    margin-top: 26px;
+    color: #000;
+    font-weight: bold;
+}
+
 .form-group label {
     text-align: right;
 }
@@ -637,21 +647,3 @@ Font Size
         max-width: 1140px;
     }
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
